lib/ekLexer.re.c
/* Generated by re2c 0.13.5 on Fri Oct 01 00:35:59 2010 */
#line 1 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"

#line 25 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"

#line 9 "<stdout>"
{
    YYCTYPE yych;
    unsigned int yyaccept = 0;

    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
            goto yy18;
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '\t':
        case '\v':
        case '\f':
        case ' ':
            goto yy13;
        case '\n':
            goto yy15;
        case '\r':
            goto yy17;
        case '"':
            goto yy12;
        case '#':
            goto yy3;
        case '$':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'G':
        case 'H':
        case 'I':
        case 'J':
        case 'K':
        case 'L':
        case 'M':
        case 'N':
        case 'O':
        case 'P':
        case 'Q':
        case 'R':
        case 'S':
        case 'T':
        case 'U':
        case 'V':
        case 'W':
        case 'X':
        case 'E':
        case 'Z':
        case '_':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
        case 'g':
        case 'h':
        case 'i':
        case 'j':
        case 'k':
        case 'l':
        case 'm':
        case 'n':
        case 'o':
        case 'p':
        case 'q':
        case 'r':
        case 's':
        case 't':
        case 'u':
        case 'v':
        case 'x':
        case 'y':
        case 'z':
            goto yy7;
        case '\'':
            goto yy11;
        case '?':
            goto yy10;
        case '\\':
            goto yy8;
        case 'w':
            goto yy5;
        default:
            goto yy20;
    }
yy2:
    YYCURSOR = YYMARKER;
    switch (yyaccept) {
        case 0:
            goto yy6;
        case 1:
            goto yy9;
        case 2:
            goto yy29;
        case 3:
            goto yy79;
        case 4:
            goto yy147;
    }
yy3:
    ++YYCURSOR;
#line 28 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"
    { goto comment; }
#line 123 "<stdout>"
yy5:
    yyaccept = 0;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
        case 'h':
            goto yy143;
        default:
            goto yy124;
    }
yy6:
#line 33 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"
    { return YTT_IDENTIFIER; }
#line 134 "<stdout>"
yy7:
    yyaccept = 0;
    yych = *(YYMARKER = ++YYCURSOR);
    goto yy124;
yy8:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
        case 'U':
            goto yy115;
        case 'u':
            goto yy114;
        default:
            goto yy9;
    }
yy9:
#line 56 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"
    { return YTT_UNKNOWN; }
#line 150 "<stdout>"
yy10:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
        case '?':
            goto yy112;
        default:
            goto yy9;
    }
yy11:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
        case '\'':
            goto yy9;
        default:
            goto yy69;
    }
yy12:
    yyaccept = 1;
    yych = *(YYMARKER = ++YYCURSOR);
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy9;
        default:
            goto yy25;
    }
yy13:
    ++YYCURSOR;
    yych = *YYCURSOR;
    goto yy23;
yy14:
#line 42 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"
    { return YTT_SPACE; }
#line 236 "<stdout>"
yy15:
    ++YYCURSOR;
yy16:
#line 45 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"
    {
        l->line++;
        l->col = 1;
        return YTT_NEWLINE;
    }
#line 246 "<stdout>"
yy17:
    yych = *++YYCURSOR;
    switch (yych) {
        case '\n':
            goto yy21;
        default:
            goto yy16;
    }
yy18:
    ++YYCURSOR;
#line 52 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"
    {
        return YTT_EOF;
    }
#line 259 "<stdout>"
yy20:
    yych = *++YYCURSOR;
    goto yy9;
yy21:
    yych = *++YYCURSOR;
    goto yy16;
yy22:
    ++YYCURSOR;
    yych = *YYCURSOR;
yy23:
    switch (yych) {
        case '\t':
        case '\v':
        case '\f':
        case ' ':
            goto yy22;
        default:
            goto yy14;
    }
yy24:
    ++YYCURSOR;
    yych = *YYCURSOR;
yy25:
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy26:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '?':
            goto yy39;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy27:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case '"':
        case '\'':
        case '\\':
        case 'a':
        case 'b':
        case 'f':
        case 'n':
        case 'r':
        case 't':
        case 'v':
            goto yy24;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
            goto yy34;
        case '?':
            goto yy32;
        case 'U':
            goto yy31;
        case 'u':
            goto yy30;
        case 'x':
            goto yy33;
        default:
            goto yy2;
    }
yy28:
    ++YYCURSOR;
yy29:
#line 39 "C:/Users/joe/Documents/work/ek/ek/ekLexer.re"
    { return YTT_LITERALSTRING; }
#line 387 "<stdout>"
yy30:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy65;
        default:
            goto yy2;
    }
yy31:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy58;
        default:
            goto yy2;
    }
yy32:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '?':
            goto yy38;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy33:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy36;
        default:
            goto yy2;
    }
yy34:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
            goto yy35;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy35:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy36:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy36;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy38:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '?':
            goto yy39;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy39:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '/':
            goto yy41;
        case '?':
            goto yy39;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy41:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy45;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
            goto yy34;
        case '?':
            goto yy46;
        case 'U':
            goto yy44;
        case '\\':
            goto yy41;
        case 'u':
            goto yy43;
        case 'x':
            goto yy36;
        default:
            goto yy24;
    }
yy43:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy55;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy44:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy48;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy45:
    yyaccept = 2;
    YYMARKER = ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy29;
        case '"':
            goto yy28;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy46:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '?':
            goto yy47;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy47:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '/':
            goto yy41;
        case '?':
            goto yy39;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy48:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy49;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy49:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy50;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy50:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy51;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy51:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy52;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy52:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy53;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy53:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
        case 0x11:
        case 0x12:
        case 0x13:
        case 0x14:
        case 0x15:
        case 0x16:
        case 0x17:
        case 0x18:
        case 0x19:
        case 0x1A:
        case 0x1B:
        case 0x1C:
        case 0x1D:
        case 0x1E:
        case 0x1F:
            goto yy2;
        case '"':
            goto yy28;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
        case 'A':
        case 'B':
        case 'C':
        case 'D':
        case 'E':
        case 'F':
        case 'a':
        case 'b':
        case 'c':
        case 'd':
        case 'e':
        case 'f':
            goto yy54;
        case '?':
            goto yy26;
        case '\\':
            goto yy27;
        default:
            goto yy24;
    }
yy54:
    ++YYCURSOR;
    yych = *YYCURSOR;
    switch (yych) {
        case 0x00:
        case 0x01:
        case 0x02:
        case 0x03:
        case 0x04:
        case 0x05:
        case 0x06:
        case 0x07:
        case 0x08:
        case '\n':
        case '\r':
        case 0x0E:
        case 0x0F:
        case 0x10:
